--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>hello coursera!</title>
 </head>
 <body>
-<h1>hello coursear!!its a great day</h1>
+<h1>hello coursear!!its a great dayyyyyyy</h1>
 
 </body>
 </html>
